--- a/S3DAPI/S3DAPI.vcxproj
+++ b/S3DAPI/S3DAPI.vcxproj
@@ -112,7 +112,7 @@
       <WarningLevel>Level3</WarningLevel>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>squishd.lib;d3dx9.lib;dxerr.lib;Winmm.lib;dinput8.lib;MadCHook32d.lib;ticppd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>squishd.lib;d3dx9.lib;dxerr.lib;Winmm.lib;dinput8.lib;MadCHook32.lib;ticppd.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>S3DAPI.def</ModuleDefinitionFile>
       <SubSystem>Windows</SubSystem>
     </Link>
@@ -127,7 +127,7 @@
       <WarningLevel>Level3</WarningLevel>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>squishd.lib;d3dx9.lib;dxerr.lib;Winmm.lib;dinput8.lib;MadCHook64d.lib;ticppd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>squishd.lib;d3dx9.lib;dxerr.lib;Winmm.lib;dinput8.lib;MadCHook64md.lib;ticppd.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>S3DAPI.def</ModuleDefinitionFile>
       <SubSystem>Windows</SubSystem>
     </Link>
@@ -159,7 +159,7 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>squish.lib;d3dx9.lib;dxerr.lib;Winmm.lib;dinput8.lib;MadCHook64.lib;ticpp.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>squish.lib;d3dx9.lib;dxerr.lib;Winmm.lib;dinput8.lib;MadCHook64mt.lib;ticpp.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>S3DAPI.def</ModuleDefinitionFile>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
@@ -187,7 +187,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>squish.lib;d3dx9.lib;Winmm.lib;dinput8.lib;MadCHook64.lib;ticpp.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>squish.lib;d3dx9.lib;Winmm.lib;dinput8.lib;MadCHook64mt.lib;ticpp.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>S3DAPI.def</ModuleDefinitionFile>
       <SubSystem>Windows</SubSystem>
     </Link>
