Switch all library use to mt from md.
The madCHook library is actually mt=multithread app, vs. md=multithread dll.  I was confused that it was multithread debug version, which it is not.

So to link a debug build, these need to be =mt.

--- a/S3DAPI/S3DAPI.vcxproj
+++ b/S3DAPI/S3DAPI.vcxproj
@@ -127,7 +127,7 @@
       <WarningLevel>Level3</WarningLevel>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>squishd.lib;d3dx9.lib;dxerr.lib;Winmm.lib;dinput8.lib;MadCHook64md.lib;ticppd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>squishd.lib;d3dx9.lib;dxerr.lib;Winmm.lib;dinput8.lib;MadCHook64mt.lib;ticppd.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>S3DAPI.def</ModuleDefinitionFile>
       <SubSystem>Windows</SubSystem>
     </Link>
