--- a/TestsPack/HookAPITest/HookAPITest.vcxproj
+++ b/TestsPack/HookAPITest/HookAPITest.vcxproj
@@ -150,7 +150,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>MadCHook64dt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>MadCHook64mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
